@@ -1272,6 +1272,18 @@ operator|-
 name|start
 argument_list|)
 expr_stmt|;
+name|t
+operator|.
+name|setStartOffset
+argument_list|(
+name|t
+operator|.
+name|startOffset
+argument_list|()
+operator|+
+name|start
+argument_list|)
+expr_stmt|;
 return|return
 name|t
 return|;
