@@ -774,6 +774,497 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+DECL|method|testOffsetChange
+specifier|public
+name|void
+name|testOffsetChange
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|WordDelimiterFilter
+name|wdf
+init|=
+operator|new
+name|WordDelimiterFilter
+argument_list|(
+operator|new
+name|TokenStream
+argument_list|()
+block|{
+name|Token
+name|t
+decl_stmt|;
+specifier|public
+name|Token
+name|next
+parameter_list|()
+block|{
+if|if
+condition|(
+name|t
+operator|!=
+literal|null
+condition|)
+return|return
+literal|null
+return|;
+name|t
+operator|=
+operator|new
+name|Token
+argument_list|(
+literal|"Ã¼belkeit)"
+argument_list|,
+literal|7
+argument_list|,
+literal|16
+argument_list|)
+expr_stmt|;
+return|return
+name|t
+return|;
+block|}
+block|}
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|)
+decl_stmt|;
+name|Token
+name|t
+init|=
+name|wdf
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|t
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Ã¼belkeit"
+argument_list|,
+name|t
+operator|.
+name|term
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|7
+argument_list|,
+name|t
+operator|.
+name|startOffset
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|15
+argument_list|,
+name|t
+operator|.
+name|endOffset
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testOffsetChange2
+specifier|public
+name|void
+name|testOffsetChange2
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|WordDelimiterFilter
+name|wdf
+init|=
+operator|new
+name|WordDelimiterFilter
+argument_list|(
+operator|new
+name|TokenStream
+argument_list|()
+block|{
+name|Token
+name|t
+decl_stmt|;
+specifier|public
+name|Token
+name|next
+parameter_list|()
+block|{
+if|if
+condition|(
+name|t
+operator|!=
+literal|null
+condition|)
+return|return
+literal|null
+return|;
+name|t
+operator|=
+operator|new
+name|Token
+argument_list|(
+literal|"(Ã¼belkeit"
+argument_list|,
+literal|7
+argument_list|,
+literal|17
+argument_list|)
+expr_stmt|;
+return|return
+name|t
+return|;
+block|}
+block|}
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|)
+decl_stmt|;
+name|Token
+name|t
+init|=
+name|wdf
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|t
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Ã¼belkeit"
+argument_list|,
+name|t
+operator|.
+name|term
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|8
+argument_list|,
+name|t
+operator|.
+name|startOffset
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|17
+argument_list|,
+name|t
+operator|.
+name|endOffset
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testOffsetChange3
+specifier|public
+name|void
+name|testOffsetChange3
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|WordDelimiterFilter
+name|wdf
+init|=
+operator|new
+name|WordDelimiterFilter
+argument_list|(
+operator|new
+name|TokenStream
+argument_list|()
+block|{
+name|Token
+name|t
+decl_stmt|;
+specifier|public
+name|Token
+name|next
+parameter_list|()
+block|{
+if|if
+condition|(
+name|t
+operator|!=
+literal|null
+condition|)
+return|return
+literal|null
+return|;
+name|t
+operator|=
+operator|new
+name|Token
+argument_list|(
+literal|"(Ã¼belkeit"
+argument_list|,
+literal|7
+argument_list|,
+literal|16
+argument_list|)
+expr_stmt|;
+return|return
+name|t
+return|;
+block|}
+block|}
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|)
+decl_stmt|;
+name|Token
+name|t
+init|=
+name|wdf
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|t
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Ã¼belkeit"
+argument_list|,
+name|t
+operator|.
+name|term
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|8
+argument_list|,
+name|t
+operator|.
+name|startOffset
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|16
+argument_list|,
+name|t
+operator|.
+name|endOffset
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testOffsetChange4
+specifier|public
+name|void
+name|testOffsetChange4
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|WordDelimiterFilter
+name|wdf
+init|=
+operator|new
+name|WordDelimiterFilter
+argument_list|(
+operator|new
+name|TokenStream
+argument_list|()
+block|{
+specifier|private
+name|Token
+name|t
+decl_stmt|;
+specifier|public
+name|Token
+name|next
+parameter_list|()
+block|{
+if|if
+condition|(
+name|t
+operator|!=
+literal|null
+condition|)
+return|return
+literal|null
+return|;
+name|t
+operator|=
+operator|new
+name|Token
+argument_list|(
+literal|"(foo,bar)"
+argument_list|,
+literal|7
+argument_list|,
+literal|16
+argument_list|)
+expr_stmt|;
+return|return
+name|t
+return|;
+block|}
+block|}
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|)
+decl_stmt|;
+name|Token
+name|t
+init|=
+name|wdf
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|t
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"foo"
+argument_list|,
+name|t
+operator|.
+name|term
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|8
+argument_list|,
+name|t
+operator|.
+name|startOffset
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|11
+argument_list|,
+name|t
+operator|.
+name|endOffset
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|t
+operator|=
+name|wdf
+operator|.
+name|next
+argument_list|()
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|t
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"bar"
+argument_list|,
+name|t
+operator|.
+name|term
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|12
+argument_list|,
+name|t
+operator|.
+name|startOffset
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|15
+argument_list|,
+name|t
+operator|.
+name|endOffset
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
